<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parentSV">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Indeterminate Progress buttons"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
            android:id="@+id/circularButton1"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickFirstBtn"
            android:textColor="@color/text_state_selector"
            android:textSize="22sp"
            app:pb_colorIndicator="@color/colorButtonCompleteState"
            app:pb_cornerRadius="48dp"
            app:pb_iconCancel="@drawable/ic_action_cross"
            app:pb_iconComplete="@drawable/ic_action_accept"
            app:pb_iconError="@drawable/ic_action_cancel"
            app:pb_selectorCancel="@color/pb_cancel_state_selector"
            app:pb_selectorComplete="@color/complete_state_selector"
            app:pb_selectorError="@color/error_state_selector"
            app:pb_selectorIdle="@color/idle_state_selector"
            app:pb_textColorAfterClick="@color/colorWhite"
            app:pb_textIdle="@string/submit"
            android:contentDescription=""
            app:pb_colorCancelText="@color/pb_orange"
            app:pb_colorErrorText="@color/pb_blue"
            app:pb_colorCompleteText="@color/pb_orange"/>

        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
            android:id="@+id/circularButton4"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickFourthBtn"
            android:textColor="@color/text_state_selector"
            android:textSize="22sp"
            app:pb_colorIndicator="@color/colorButtonCompleteState"
            app:pb_cornerRadius="48dp"
            app:pb_iconCancel="@drawable/ic_action_cross"
            app:pb_iconComplete="@drawable/ic_action_accept"
            app:pb_iconError="@drawable/ic_action_cancel"
            app:pb_selectorCancel="@color/pb_cancel_state_selector"
            app:pb_selectorComplete="@color/complete_state_selector"
            app:pb_selectorError="@color/error_state_selector"
            app:pb_selectorIdle="@color/idle_state_selector"
            app:pb_textColorAfterClick="@color/colorWhite"
            app:pb_textIdle="@string/submit"/>

        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
            android:id="@+id/circularButton5"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickFifthBtn"
            android:textColor="@color/text_state_selector"
            android:textSize="22sp"
            app:pb_colorIndicator="@color/colorButtonCompleteState"
            app:pb_cornerRadius="48dp"
            app:pb_iconCancel="@drawable/ic_action_cross"
            app:pb_iconComplete="@drawable/ic_action_accept"
            app:pb_iconError="@drawable/ic_action_cancel"
            app:pb_selectorCancel="@color/pb_cancel_state_selector"
            app:pb_selectorComplete="@color/complete_state_selector"
            app:pb_selectorError="@color/error_state_selector"
            app:pb_selectorIdle="@color/idle_state_selector"
            app:pb_textColorAfterClick="@color/colorWhite"
            app:pb_textIdle="@string/submit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Fixed time Progress buttons"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
            android:id="@+id/circularButton2"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickSecondBtn"
            android:textColor="@color/text_state_selector"
            android:textSize="22sp"
            app:pb_colorIndicator="@color/colorButtonCompleteState"
            app:pb_cornerRadius="48dp"
            app:pb_iconCancel="@drawable/ic_action_cross"
            app:pb_iconComplete="@drawable/ic_action_accept"
            app:pb_iconError="@drawable/ic_action_cancel"
            app:pb_selectorCancel="@color/pb_cancel_state_selector"
            app:pb_selectorComplete="@color/complete_state_selector"
            app:pb_selectorError="@color/error_state_selector"
            app:pb_selectorIdle="@color/idle_state_selector"
            app:pb_textColorAfterClick="@color/colorWhite"
            app:pb_textIdle="@string/submit" />

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Percentage completed :"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Manually Progressing buttons"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <com.nihaskalam.progressbuttonlibrary.CircularProgressButton
            android:id="@+id/circularButton3"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickThirdBtn"
            android:textColor="@color/text_state_selector"
            android:textSize="22sp"
            app:pb_colorIndicator="@color/colorButtonCompleteState"
            app:pb_cornerRadius="48dp"
            app:pb_iconCancel="@drawable/ic_action_cross"
            app:pb_iconComplete="@drawable/ic_action_accept"
            app:pb_iconError="@drawable/ic_action_cancel"
            app:pb_selectorCancel="@color/pb_cancel_state_selector"
            app:pb_selectorComplete="@color/complete_state_selector"
            app:pb_selectorError="@color/error_state_selector"
            app:pb_selectorIdle="@color/idle_state_selector"
            app:pb_textColorAfterClick="@color/colorWhite"
            app:pb_textIdle="@string/submit" />

        <TextView
            android:id="@+id/progressAmountTV"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/progress_amount"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:onClick="setProgress"
            android:text="@string/doProgress"
            android:textAllCaps="false" />


    </LinearLayout>
</ScrollView>