<resources>
    <string name="app_name">Sample</string>
    <string name="submit">Submit</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="Cancel">Cancel</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>
    <string name="doProgress">DoProgress</string>
    <string name="progress_amount">Progress completed :</string>

    <array name="sample_list">
        <item>@string/IndeterminateProgressSample</item>
        <item>@string/IntegerProgressSample</item>
        <item>@string/StateChangeSample</item>
        <item>@string/ProgressPaddingSample</item>
        <item>@string/CustomSelectorSample</item>
    </array>
</resources>
